--- a/index.html
+++ b/index.html
@@ -47,12 +47,57 @@
 					</li>
 				</ul>
 				<form class="form-inline">
-					<input class="form-control ml-4 mr-2" type="search" placeholder="Buscar..."> 
+					<input class="form-control ml-4 mr-2" type="search" placeholder="Buscar...">
 					<button class="btn btn-dark" type="submit">OK</button>
 				</form>
 			</div>
 		</div>
 	</nav>
+	<div id="carouselSite" class="carousel slide" data-ride="carousel">
+		<ol class="carousel-indicators">
+			<li data-target="#carouselSite" data-slide-to="0" class="active"></li>
+			<li data-target="#carouselSite" data-slide-to="1"></li>
+			<li data-target="#carouselSite" data-slide-to="2"></li>
+		</ol>
+
+
+		<div class="carousel-inner">
+
+			<div class="carousel-item active">
+				<img src="img/imagem1.jpg" style="width: 1680px; height: 500px;" class="img-fluid d-block w-100">
+				<div class="carousel-caption d-none d-md-block">
+					<h3>Lorem Ipsum dolor</h3>
+					<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam, reprehenderit praesentium </p>
+				</div>
+			</div>
+
+			<div class="carousel-item">
+				<img src="img/imagem2.jpg" style="width: 1680px; height: 500px;" class="img-fluid d-block w-100">
+				<div class="carousel-caption d-none d-md-block">
+					<h3>Lorem Ipsum dolor</h3>
+					<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam, reprehenderit praesentium </p>
+				</div>
+			</div>
+
+			<div class="carousel-item">
+				<img src="img/imagem3.jpg" style="width: 1680px; height: 500px;" class="img-fluid d-block w-100">
+				<div class="carousel-caption d-none d-md-block">
+					<h3>Lorem Ipsum dolor</h3>
+					<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam, reprehenderit praesentium </p>
+				</div>
+			</div>
+		</div>
+
+		<a class="carousel-control-prev" href="#carouselSite" role="button" data-slide="prev">
+			<span class="carousel-control-prev-icon"> </span>
+			<span class="sr-only">Anterior</span>
+		</a>
+
+		<a class="carousel-control-next" href="#carouselSite" role="buton" data-slide="next">
+			<span class="carousel-control-next-icon"></span>
+			<span class="sr-only"> Próximo</span>
+		</a>
+	</div>
 
 	<!-- jquery, popper.js e bootstrap-->
 	<script src="node_modules\jquery\dist\jquery.js"></script>
