--- a/index.html
+++ b/index.html
@@ -66,24 +66,27 @@
 			<div class="carousel-item active">
 				<img src="img/imagem1.jpg" style="width: 1680px; height: 500px;" class="img-fluid d-block w-100">
 				<div class="carousel-caption d-none d-md-block">
-					<h3>Lorem Ipsum dolor</h3>
-					<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam, reprehenderit praesentium </p>
+					<h1>Lorem Ipsum dolor</h1>
+					<p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam, reprehenderit
+						praesentium </p>
 				</div>
 			</div>
 
 			<div class="carousel-item">
 				<img src="img/imagem2.jpg" style="width: 1680px; height: 500px;" class="img-fluid d-block w-100">
 				<div class="carousel-caption d-none d-md-block">
-					<h3>Lorem Ipsum dolor</h3>
-					<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam, reprehenderit praesentium </p>
+					<h1>Lorem Ipsum dolor</h1>
+					<p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam, reprehenderit
+						praesentium </p>
 				</div>
 			</div>
 
 			<div class="carousel-item">
 				<img src="img/imagem3.jpg" style="width: 1680px; height: 500px;" class="img-fluid d-block w-100">
 				<div class="carousel-caption d-none d-md-block">
-					<h3>Lorem Ipsum dolor</h3>
-					<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam, reprehenderit praesentium </p>
+					<h1>Lorem Ipsum dolor</h1>
+					<p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam, reprehenderit
+						praesentium </p>
 				</div>
 			</div>
 		</div>
@@ -97,6 +100,58 @@
 			<span class="carousel-control-next-icon"></span>
 			<span class="sr-only"> Próximo</span>
 		</a>
+	</div>
+
+	<div class="container">
+		<div class="row">
+			<div class="col-12 text-center my-5">
+				<h1 class="display-3">Lorem ipsum</h1>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nam quaerat ut laudantium ab </p>
+			</div>
+		</div>
+		<div class="row mb-5">
+			<div class="col-3">
+				<nav id="navbarVertical" class="navbar navbar-light bg-light">
+					<nav class="nav nav-pills flex-column">
+						<a class="nav-link" href="#item1">Item 1</a>
+						<nav class="nav nav-pills flex-column">
+							<a class="nav-link ml-3" href="#item1-1">Item 1-1</a>
+							<a class="nav-link ml-3" href="#item1-2">Item 1-2</a>
+						</nav>
+						<a class="nav-link my-2" href="#item2">Item 2</a>
+						<a class="nav-link my-2" href="#item3">Item 3</a>
+						<nav class="nav nav-pills flex-column">
+							<a class="nav-link ml-3" href="#item3-1">Item 3-1</a>
+							<a class="nav-link ml-3" href="#item3-2">Item 3-2</a>
+						</nav>
+					</nav>
+				</nav>
+			</div>
+			<div class="col-9">
+				<div data-spy="scroll//" data-target="#navbarVertical" data-offset="0" class="scrollspySite">
+					<h4 id="item1">Lorem Ipsum</h4>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nulla, nam dolorem obcaecati aspernatur hic ipsum optio placeat dicta ipsa enim alias, in labore, ex eaque? Autem delectus hic odit.</p>
+
+					<h5 id="item1-1">Lorem Ipsum</h5>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas necessitatibus harum quia dicta delectus modi doloremque corrupti dolore qui laboriosam quis asperiores sapiente, reiciendis dolorem sit voluptate, quisquam magni aliquid.</p>
+
+					<h5 id="item1-2">Lorem Ipsum</h5>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores eligendi aspernatur temporibus, nam eius iste voluptas illum fugiat cumque similique nulla rerum, sequi ratione distinctio nisi, quibusdam at dicta debitis.</p>
+
+					<h4 id="item2">Lorem Ipsum</h4>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nulla, nam dolorem obcaecati aspernatur hic ipsum optio placeat dicta ipsa enim alias, in labore, ex eaque? Autem delectus hic odit.</p>
+
+					<h4 id="item3">Lorem Ipsum</h4>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nulla, nam dolorem obcaecati aspernatur hic ipsum optio placeat dicta ipsa enim alias, in labore, ex eaque? Autem delectus hic odit.</p>
+
+					<h5 id="item3-1">Lorem Ipsum</h5>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas necessitatibus harum quia dicta delectus modi doloremque corrupti dolore qui laboriosam quis asperiores sapiente, reiciendis dolorem sit voluptate, quisquam magni aliquid.</p>
+
+					<h5 id="item3-2">Lorem Ipsum</h5>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores eligendi aspernatur temporibus, nam eius iste voluptas illum fugiat cumque similique nulla rerum, sequi ratione distinctio nisi, quibusdam at dicta debitis.</p>
+				</div>
+			</div>
+		</div>
 	</div>
 
 	<!-- jquery, popper.js e bootstrap-->
