--- a/index.html
+++ b/index.html
@@ -130,25 +130,108 @@
 			<div class="col-9">
 				<div data-spy="scroll//" data-target="#navbarVertical" data-offset="0" class="scrollspySite">
 					<h4 id="item1">Lorem Ipsum</h4>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nulla, nam dolorem obcaecati aspernatur hic ipsum optio placeat dicta ipsa enim alias, in labore, ex eaque? Autem delectus hic odit.</p>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nulla, nam dolorem obcaecati
+						aspernatur hic ipsum optio placeat dicta ipsa enim alias, in labore, ex eaque? Autem delectus
+						hic odit.</p>
 
 					<h5 id="item1-1">Lorem Ipsum</h5>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas necessitatibus harum quia dicta delectus modi doloremque corrupti dolore qui laboriosam quis asperiores sapiente, reiciendis dolorem sit voluptate, quisquam magni aliquid.</p>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas necessitatibus harum quia dicta
+						delectus modi doloremque corrupti dolore qui laboriosam quis asperiores sapiente, reiciendis
+						dolorem sit voluptate, quisquam magni aliquid.</p>
 
 					<h5 id="item1-2">Lorem Ipsum</h5>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores eligendi aspernatur temporibus, nam eius iste voluptas illum fugiat cumque similique nulla rerum, sequi ratione distinctio nisi, quibusdam at dicta debitis.</p>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores eligendi aspernatur temporibus,
+						nam eius iste voluptas illum fugiat cumque similique nulla rerum, sequi ratione distinctio nisi,
+						quibusdam at dicta debitis.</p>
 
 					<h4 id="item2">Lorem Ipsum</h4>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nulla, nam dolorem obcaecati aspernatur hic ipsum optio placeat dicta ipsa enim alias, in labore, ex eaque? Autem delectus hic odit.</p>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nulla, nam dolorem obcaecati
+						aspernatur hic ipsum optio placeat dicta ipsa enim alias, in labore, ex eaque? Autem delectus
+						hic odit.</p>
 
 					<h4 id="item3">Lorem Ipsum</h4>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nulla, nam dolorem obcaecati aspernatur hic ipsum optio placeat dicta ipsa enim alias, in labore, ex eaque? Autem delectus hic odit.</p>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nulla, nam dolorem obcaecati
+						aspernatur hic ipsum optio placeat dicta ipsa enim alias, in labore, ex eaque? Autem delectus
+						hic odit.</p>
 
 					<h5 id="item3-1">Lorem Ipsum</h5>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas necessitatibus harum quia dicta delectus modi doloremque corrupti dolore qui laboriosam quis asperiores sapiente, reiciendis dolorem sit voluptate, quisquam magni aliquid.</p>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas necessitatibus harum quia dicta
+						delectus modi doloremque corrupti dolore qui laboriosam quis asperiores sapiente, reiciendis
+						dolorem sit voluptate, quisquam magni aliquid.</p>
 
 					<h5 id="item3-2">Lorem Ipsum</h5>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores eligendi aspernatur temporibus, nam eius iste voluptas illum fugiat cumque similique nulla rerum, sequi ratione distinctio nisi, quibusdam at dicta debitis.</p>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores eligendi aspernatur temporibus,
+						nam eius iste voluptas illum fugiat cumque similique nulla rerum, sequi ratione distinctio nisi,
+						quibusdam at dicta debitis.</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="row mb-5">
+			<div class="col-sm-4">
+				<div class="card">
+					<img class="card-img-top" src="img/imagem1.jpg">
+					<div class="card-body">
+						<h4 class="card-title">Consectetur</h4>
+						<h6 class="card-subtitle mb-2 text-muted">Ipsum sit amet</h6>
+						<p class="card-text">Lorem ipsum dolor sit amet consectetur </p>
+					</div>
+					<ul class="list-group list-group-flush">
+						<li class="list-group-item">sit amet consectetur</li>
+						<li class="list-group-item">sit amet consectetur</li>
+						<li class="list-group-item">sit amet consectetur</li>
+					</ul>
+					<div class="card-body">
+						<a href="#" class="card-link">Lorem</a>
+						<a href="#" class="card-link">ipsum dolor</a>
+					</div>
+					<div class="card-footer text-muted">
+						excepturi natus pariatur omnis!
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-4">
+				<div class="card">
+					<img class="card-img-top" src="img/imagem1.jpg">
+					<div class="card-body">
+						<h4 class="card-title">Consectetur</h4>
+						<h6 class="card-subtitle mb-2 text-muted">Ipsum sit amet</h6>
+						<p class="card-text">Lorem ipsum dolor sit amet consectetur </p>
+					</div>
+					<ul class="list-group list-group-flush">
+						<li class="list-group-item">sit amet consectetur</li>
+						<li class="list-group-item">sit amet consectetur</li>
+						<li class="list-group-item">sit amet consectetur</li>
+					</ul>
+					<div class="card-body">
+						<a href="#" class="card-link">Lorem</a>
+						<a href="#" class="card-link">ipsum dolor</a>
+					</div>
+					<div class="card-footer text-muted">
+						excepturi natus pariatur omnis!
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-4">
+				<div class="card">
+					<img class="card-img-top" src="img/imagem1.jpg">
+					<div class="card-body">
+						<h4 class="card-title">Consectetur</h4>
+						<h6 class="card-subtitle mb-2 text-muted">Ipsum sit amet</h6>
+						<p class="card-text">Lorem ipsum dolor sit amet consectetur </p>
+					</div>
+					<ul class="list-group list-group-flush">
+						<li class="list-group-item">sit amet consectetur</li>
+						<li class="list-group-item">sit amet consectetur</li>
+						<li class="list-group-item">sit amet consectetur</li>
+					</ul>
+					<div class="card-body">
+						<a href="#" class="card-link">Lorem</a>
+						<a href="#" class="card-link">ipsum dolor</a>
+					</div>
+					<div class="card-footer text-muted">
+						excepturi natus pariatur omnis!
+					</div>
 				</div>
 			</div>
 		</div>
