--- a/index.html
+++ b/index.html
@@ -226,12 +226,49 @@
 						<li class="list-group-item">sit amet consectetur</li>
 					</ul>
 					<div class="card-body">
-						<a href="#" class="card-link">Lorem</a>
+						<a href="#" class="card-link" data-toggle="modal" data-target="#siteModal">Modal</a>
 						<a href="#" class="card-link">ipsum dolor</a>
 					</div>
 					<div class="card-footer text-muted">
 						excepturi natus pariatur omnis!
 					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!--Modal-->
+	<div class="modal fade" id="siteModal" tabindex="-1" role="dialog">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title"> provident deleniti</h5>
+					<button type="button" class="close" data-dismiss="modal">
+						<span>&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium illo excepturi perferendis
+						dignissimos consequuntur, tenetur nam dolorum placeat ipsam aspernatur similique dolorem ad quam
+						aliquam et suscipit, voluptatum quisquam delectus.</p>
+					<div class="container-fluid">
+						<div class="row">
+							<div class="col-6">
+								<h6>Lorem</h6>
+								<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis temporibus
+									placeat magni illum explicabo unde corporis quia nesciunt? Fugiat laudantium
+									incidunt non quibusdam natus blanditiis esse rerum dolore eveniet nulla.</p>
+							</div>
+							<div class="col-6">
+								<h6>Ipsum</h6>
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad porro, deleniti quibusdam
+									repellendus explicabo in esse eius voluptate at aliquam quisquam nobis ab facilis
+									enim possimus sint fugit nesciunt maxime.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-danger" data-dismiss="modal">Donec</button>
 				</div>
 			</div>
 		</div>
