--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 			</div>
 		</div>
 		<div class="row mb-5">
-			<div class="col-3">
+			<div class="col-sm-6 col-md-4 mb-3">
 				<nav id="navbarVertical" class="navbar navbar-light bg-light">
 					<nav class="nav nav-pills flex-column">
 						<a class="nav-link" href="#item1">Item 1</a>
@@ -127,7 +127,7 @@
 					</nav>
 				</nav>
 			</div>
-			<div class="col-9">
+			<div class="col-sm-6 col-md-8">
 				<div data-spy="scroll//" data-target="#navbarVertical" data-offset="0" class="scrollspySite">
 					<h4 id="item1">Lorem Ipsum</h4>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nulla, nam dolorem obcaecati
@@ -167,9 +167,9 @@
 			</div>
 		</div>
 
-		<div class="row mb-5">
-			<div class="col-sm-4">
-				<div class="card">
+		<div class="row justify-content-sm-center">
+			<div class="col-sm-6 col-md-4">
+				<div class="card mb-5">
 					<img class="card-img-top" src="img/imagem1.jpg">
 					<div class="card-body">
 						<h4 class="card-title">Consectetur</h4>
@@ -190,8 +190,8 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-sm-4">
-				<div class="card">
+			<div class="col-sm-6 col-md-4">
+				<div class="card mb-5">
 					<img class="card-img-top" src="img/imagem1.jpg">
 					<div class="card-body">
 						<h4 class="card-title">Consectetur</h4>
@@ -212,8 +212,8 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-sm-4">
-				<div class="card">
+			<div class="col-sm-6 col-md-4">
+				<div class="card mb-5">
 					<img class="card-img-top" src="img/imagem1.jpg">
 					<div class="card-body">
 						<h4 class="card-title">Consectetur</h4>
@@ -236,6 +236,90 @@
 			</div>
 		</div>
 	</div>
+	<div class="jumbotron jumbotron-fluid">
+		<div class="container">
+			<div class="row">
+				<div class="col-12 text-center">
+					<h1 class="display-4">Natus pariatur omnis</h1>
+					<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem quae numquam,
+						corporis, reprehenderit illo nisi ad consequatur est dolor quo accusamus sequi voluptatum
+						ducimus. Placeat illum facilis enim temporibus vero.</p>
+					<hr>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-12">
+					<ul class="nav nav-pills justify-content-center mb-4" id="pills-nav" role="tablist">
+						<li nav-item>
+							<a class="nav-link active" id="nav-01" data-toggle="pill" href="#nav-item01">Item 1</a>
+						</li>
+						<li nav-item>
+							<a class="nav-link" id="nav-02" data-toggle="pill" href="#nav-item02">Item 2</a>
+						</li>
+						<li nav-item>
+							<a class="nav-link" id="nav-03" data-toggle="pill" href="#nav-item03">Item 3</a>
+						</li>
+					</ul>
+					<div class="tab-content" id="nav-pills-content">
+						<div class="tab-pane fade show active" id="nav-item01" role="tabpanel">
+							<div class="row">
+								<div class="col-sm-6">
+									<div class="embed-responsive embed-responsive-16by9">
+										<iframe class="embed-responsive-item"
+											src="https://www.youtube.com/embed/5OSMqSPmfVA"></iframe>
+									</div>
+								</div>
+								<div class="col-sm-6">
+									<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem
+										perferendis sunt aut, quibusdam eligendi beatae quo, recusandae possimus cumque
+										consectetur illo. Nostrum iusto, similique dignissimos nisi tenetur cumque
+										assumenda ducimus!</p>
+								</div>
+							</div>
+						</div>
+
+						<div class="tab-pane fade" id="nav-item02" role="tabpanel">
+							<div class="row">
+								<div class="col-sm-6">
+									<div class="embed-responsive embed-responsive-16by9">
+										<iframe class="embed-responsive-item"
+											src="https://www.youtube.com/embed/5OSMqSPmfVA"></iframe>
+									</div>
+								</div>
+								<div class="col-sm-6">
+									<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem
+										perferendis
+										sunt aut, quibusdam eligendi beatae quo, recusandae possimus cumque consectetur
+										illo. Nostrum iusto, similique dignissimos nisi tenetur cumque assumenda
+										ducimus!
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="tab-pane fade" id="nav-item03" role="tabpanel">
+							<div class="row">
+								<div class="col-sm-6">
+									<div class="embed-responsive embed-responsive-16by9">
+										<iframe class="embed-responsive-item"
+											src="https://www.youtube.com/embed/5OSMqSPmfVA"></iframe>
+									</div>
+								</div>
+								<div class="col-sm-6">
+									<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem
+										perferendis
+										sunt aut, quibusdam eligendi beatae quo, recusandae possimus cumque consectetur
+										illo. Nostrum iusto, similique dignissimos nisi tenetur cumque assumenda
+										ducimus!
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<!--Modal-->
 	<div class="modal fade" id="siteModal" tabindex="-1" role="dialog">
 		<div class="modal-dialog modal-lg" role="document">
