--- a/index.html
+++ b/index.html
@@ -383,13 +383,55 @@
 					<div class="form-row">
 						<div class="form-group col-sm-12">
 							<button type="submit" class="btn btn-primary">Enviar</button>
-							<a tabindex="0" class="btn btn-secondary ml-2" role="button" data-toggle="popover" data-placement="right" data-trigger="focus" title="Maecenas felis massa" data-content="lorem ipsum massa maecenas felis">Ajuda</a>
+							<a tabindex="0" class="btn btn-secondary ml-2" role="button" data-toggle="popover"
+								data-placement="right" data-trigger="focus" title="Maecenas felis massa"
+								data-content="lorem ipsum massa maecenas felis">Ajuda</a>
 						</div>
 					</div>
 				</form>
 			</div>
 		</div>
+		<div class="row">
+			<div class="col-12 mb-3">
+				<hr>
+			</div>
+			<div class="col-sm-4">
+				<h3>Curso</h3>
+				<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate repellendus est ipsa quis
+					dolore quaerat accusamus incidunt cupiditate dolorum similique, omnis aliquam fugit
+					asperiores,
+					maiores, molestiae ab id quibusdam velit.</p>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem qui, unde itaque sint et,
+					soluta ducimus natus nisi similique quod repellat. Cupiditate sint id omnis voluptates, ab
+					eveniet tempora explicabo.</p>
+			</div>
+			<div class="col-sm-4">
+				<h3>Menu</h3>
+				<div class="list-group text-center">
+					<a href="#" class="list-group-item list-group-item-action">Perfil</a>
+					<a href="#" class="list-group-item list-group-item-action">Serviços</a>
+					<a href="#" class="list-group-item list-group-item-action">Depoimentos</a>
+					<a href="#" class="list-group-item list-group-item-action">Contatos</a>
+				</div>
+			</div>
+			<div class="col-sm-4">
+				<h3>Social</h3>
+				<div class="btn-group-vertical btn-block btn-group-lg" role="group">
+					<a class="btn btn-outline-primary" href="#"><i class="fa fa-facebook" aria-hidden="true"></i> Facebook</a>
+					<a class="btn btn-outline-info" href="#"><i class="fa fa-twitter" aria-hidden="true"></i> Twitter</a>
+					<a class="btn btn-outline-warning" href="#"><i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a>
+				</div>
+			</div>
+			<div class="col-12 mt-5">
+				<blockquote class="blockquote text-center">
+					<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit cum officiis inventore enim quia excepturi animi alias numquam. Ut deserunt excepturi illum dolorem dicta labore, numquam consectetur possimus eligendi facere?</p>
+					<footer class="blockquote-footer">Lorem ipsum <cite title="titulo">adipisicing elit</cite></footer>
+				</blockquote>
+			</div>
+		</div>
 	</div>
+
+
 
 	<!--Modal-->
 	<div class="modal fade" id="siteModal" tabindex="-1" role="dialog">
@@ -434,11 +476,12 @@
 	<script src="node_modules\popper.js\dist\umd\popper.js"></script>
 	<script src="node_modules\bootstrap\dist\js\bootstrap.js"></script>
 
+	<!--popover-->
 	<script>
-		$(function (){
+		$(function () {
 			$('[data-toggle="popover"]').popover()
 		})
-		</script>
+	</script>
 
 </body>
 
